# ace-bartman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common-toolchain.cmake  convert_images.py  convert_maps.py  extract_data.py
docs/: FILE_FORMATS.md
python/warchive/: __init__.py  archive.py  bitmap.py  img.py  map.py
src/: game.c  units.c
